--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:username@domain.top-level domain">Write your email here</a>
+                        <a href="mailto:collins.alex@students.jkuat.ac.ke">collins.alex@students,jkuat.ac.ke</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/yourGitHubUsername">Write your username here!</a>
+                        <a href="https://github.com/Colins7">Colins7/tyngh</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
