--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="https://github.com/Colins7">Colins7/tyngh</a>
+                        <a href="https://github.com/Colins7">Colins</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/yourLinkedInUsername">Write your username here!</a>
+                        <a href="linkedin.com/yourLinkedInUsername">Colins Alex </a>
                     </p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
                     <ul>
-                        <li>Skill 1!</li>
-                        <li>Skill 2!</li>
+                        <li>strong creative ability</li>
+                        <li>A logical approach to work  </li>
                         <li>Skill 3!</li>
                         <li>Skill 4!</li>
                     </ul>
