--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 					<h2>SKILLS</h2>
 					<!-- your skills -->
                     <ul>
-                        <li>strong creative ability</li>
-                        <li>A logical approach to work  </li>
-                        <li>Skill 3!</li>
-                        <li>Skill 4!</li>
+                        <li>Web performance optimization </li>
+                        <li>Responsive design  </li>
+                        <li>Prpficiency in HTMK and CSS styling </li>
+                        <li>Web framework</li>
                     </ul>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>Write your course here!</h3>
+                    <h3>Computer Technology</h3>
                     <p>
-                        Write your institution here!
+                        Jomo Kenyatta University Of Agricukture and Technology
                     </p>
                     <p>
-                        Start - End Date
+                        September 2021- December 2025
                     </p>
 				</section>            
 			</article>
@@ -57,30 +57,30 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>Write a blurb about yourself!</p>
+                    <p>I am a positive, enthusiastic and competent Web Developer who is responsible for the design and construction of websites. </p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>Job Title</h3>
+                    <h3>Web Developer</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        Tezza Bussiness Solutions | May – April
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Task 1 - creating and maintaining databases and application integrations </li>
+                            <li>Task 2 - debigging the entire back end of the system</li>
+                            <li>Write  - There was reduce time to the market </li>
                             
                     </ul>
 
                     <h3>Job Title 2</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        Word Press Organization | Novembr  – March 
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Task 1 - developing user interface</li>
+                            <li>Task 2 - managing software workflow </li>
+                            <li>       -There was an improved usability of a design </li>
                             
                     </ul>
 				</section>
